sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: ';' expected but '=' found.
i1: Int = 0
        ^AlgBubbleSort1:7: error: '(' expected but 'for' found.
for(i <- 0 to (getNombreValeurs()-2))  {
^AlgBubbleSort1:15: error: illegal start of simple expression
}
^