sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

i1: Int = 0

while
for(i <- 0 to (getNombreValeurs()-2))  {
	if(getValeur(i) < getValeur(i+1)) {
		echange(i,i+1)
		i1++
	}

	
}
}
